--- a/MVC_SYSTEM/Views/bgtHQExpensesIT/ButiranBelanjaIT.cshtml
+++ b/MVC_SYSTEM/Views/bgtHQExpensesIT/ButiranBelanjaIT.cshtml
@@ -2,6 +2,7 @@
     Layout = "~/Views/Shared/_LayoutMainBudget.cshtml";
     var year = ViewBag.SelectedYear as string;
     var costCenter = ViewBag.CostCenter as string;
+    bool isTemplateEnable = ViewBag.isTemplateEnable;
 
     AjaxOptions options = new AjaxOptions
     {
@@ -37,10 +38,20 @@
                     <button type="submit" class="btn btn-primary btn-sm btn-block">@GlobalResEstate.btnView</button>
                 </div>
                 <div class="col-md-7"></div>
-                <div class="col-md-2">
-                    <label>&nbsp;</label>
-                    <a href="@Url.Action("DownloadTemplate", new { year = year })" class="btn btn-danger btn-block">EXCEL TEMPLATE FILE</a>
-                </div>
+                @if (isTemplateEnable)
+                {
+                    <div class="col-md-2">
+                        <label>&nbsp;</label>
+                        <a href="@Url.Action("DownloadTemplate", new { year = year })" class="btn btn-danger btn-block">EXCEL TEMPLATE FILE</a>
+                    </div>
+                }
+                else { 
+                    <div class="col-md-2">
+                        <label>&nbsp;</label>
+                        <a disabled href="javascript:void(0);" class="btn btn-danger btn-block">EXCEL TEMPLATE FILE</a>
+                    </div>
+                }
+
             </div>
         }
     </div>
