--- a/MVC_SYSTEM/Views/bgtHQExpensesCorp/_Records.cshtml
+++ b/MVC_SYSTEM/Views/bgtHQExpensesCorp/_Records.cshtml
@@ -17,12 +17,12 @@
             headerStyle: "webgrid-header",
             mode: WebGridPagerModes.All,
             columns: grid.Columns(
-                grid.Column("No", style: "text-center col-md-1", format: item => item.WebGrid.Rows.IndexOf(item) + 1 + Math.Round(Convert.ToDouble(grid.TotalRowCount / grid.PageCount) / grid.RowsPerPage) * grid.RowsPerPage * grid.PageIndex),
+                grid.Column(GlobalResEstate.hdrNo, style: "text-center col-md-1", format: item => item.WebGrid.Rows.IndexOf(item) + 1 + Math.Round(Convert.ToDouble(grid.TotalRowCount / grid.PageCount) / grid.RowsPerPage) * grid.RowsPerPage * grid.PageIndex),
                 grid.Column("BudgetYear", "Budget Year", style: "text-center"),
                 grid.Column("UploadedBy", "Upload By", style: "text-center"),
                 grid.Column("UploadedDate", "Upload Date", style: "text-center"),
                 grid.Column("Version", "Version", style: "text-center"),
-                grid.Column("Action", canSort: false, style: "text-center text-nowrap col-md-1", format: @<text>
+                grid.Column(GlobalResEstate.hdrAction, canSort: false, style: "text-center text-nowrap col-md-1", format: @<text>
                         @Html.Raw("<a href='" + @Url.Action("Details", new { BudgetYear = item.BudgetYear, Version = item.Version }) + "' class='btn btn-primary btn-sm' data-modal2=''><i class='fa fa-list'></i></a>")
                         @Html.Raw("<a href='" + @Url.Action("Download", new { BudgetYear = item.BudgetYear, Version = item.Version }) + "' class='btn btn-success btn-sm'><i class='fa fa-download'></i></a>")
                 </text>)))
@@ -31,7 +31,7 @@
     {
         <hr />
         <div class="text-center text-danger">
-            @Html.Label("No Data")
+            @Html.Label(GlobalResEstate.msgErrorSearch)
         </div>
         <hr />
     }
