Add new screen for Integration

--- a/MVC_SYSTEM/Views/Shared/_PartialLeftNavBudget.cshtml
+++ b/MVC_SYSTEM/Views/Shared/_PartialLeftNavBudget.cshtml
@@ -83,6 +83,7 @@
                             </li>
                         }
                     }
+                    <li><a href="@Url.Action("Index", "bgtIntegration")" onclick="return DisplayProgressMessage2(this);">Integration <span style="font-size:16px;padding-left:10px" class="pull-right hidden-xs showopacity"><i class="fa fa-share-square fa-fw"></i></span></a></li>
                     <li><a href="@Url.Action("Index", "Modules")" onclick="return DisplayProgressMessage2(this);">OPMS Modules <span style="font-size:16px;padding-left:10px" class="pull-right hidden-xs showopacity"><i class="fa fa-external-link fa-fw"></i></span></a></li>
                 </ul>
             </div>
