changes for HQ Expenses

--- a/MVC_SYSTEM/Views/Shared/_LayoutMainBudget.cshtml
+++ b/MVC_SYSTEM/Views/Shared/_LayoutMainBudget.cshtml
@@ -88,5 +88,6 @@
     </div>
     @Html.Partial("_PartialFooter")
 </body>
+@Html.Partial("_PartialSweetAlert")
 @RenderSection("scripts", required: false)
 </html>
